--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -27,14 +27,18 @@
 	border: 0px;
 }
 
+#navmenu {position: relative;}
 #collapsable-nav {
 	position: absolute;
 	width: 100%;
 	z-index: 100;
 	background-color: #ffe6cc;
+	left: 0px;
+	top: 0px;
 }
 
 #menu-button {
-	position: relative;
+/*	position: relative;
 	top: 20px;
-}
+*/}
+
